# skynet-mvp

./: .env.example  .gitignore  CLAUDE.md  DAY1-COMPLETED.md  DAY2-COMPLETED.md  DAY3-COMPLETED.md  DAY4-COMPLETED.md  DAY5-COMPLETED.md  Dockerfile  README.md  SUPABASE-RAILWAY-DEPLOYMENT.md  TESTED-AND-VERIFIED.md  alembic.ini  docker-compose.yml  init_db.py  minimal_test.py  pyproject.toml  requirements.txt  simple_test.py  start.sh  startup.py  test_db_connection.py  test_full_pipeline.py  test_simple.py
alembic/: env.py
alembic/versions/: 20260123_001_initial_schema.py
src/: config.py  main.py
src/api/v1/: email.py  synthesis.py  transcription.py
src/database/: neo4j_driver.py.disabled  postgres.py
src/integrations/: openai_synthesis_client.py  smtp_client.py  soniox_client.py  whisper_client.py
src/models/: __init__.py  base.py  conversation.py  participant.py  synthesis.py
src/repositories/: __init__.py  base.py  conversation_repository.py  synthesis_repository.py
src/schemas/: email.py  synthesis.py  transcription.py
src/services/: email_service.py  synthesis_service.py  transcription_service.py
src/templates/: synthesis_email.html
src/utils/: file_utils.py  logger.py
tests/: conftest.py
tests/test_api/: test_system.py
tests/test_repositories/: test_conversation_repository.py
